# Geometry

./: .gitignore
DensityFieldHexRefinement/: CMakeLists.txt  README.md
DensityFieldHexRefinement/src/: FieldAdaptiveRefine.cpp  FieldAdaptiveRefine.h  HexEval.cpp  HexEval.h  MeshIO.cpp  MeshIO.h  TrivialRefine.cpp  TrivialRefine.h  Utility.hpp  main.cpp
DensityFieldHexRefinement/src/HexEval/: HexEval.cpp  HexEval.h  Integral.cpp  Integral.h  heIntegral.cpp  heIntegral.h  heUtility.hpp
DensityFieldHexRefinement/src/HexPadding/: HexPadding.cpp  HexPadding.h  hpMesh.cpp  hpMesh.h  hpUtility.hpp
DensityFieldHexRefinement/src/HexRefine/: TrivialRefine.cpp  TrivialRefine.h  hrUtility.hpp
DensityFieldHexRefinement/src/HexRefinement/: TrivialRefine.h
FaltAngleTerminator/: CMakeLists.txt  README.md  output.vtk
FaltAngleTerminator/data/: bunny.vtk
FaltAngleTerminator/src/: FlatAngleTerminator.cpp  Mesh.cpp  Mesh.h  MeshIO.cpp  MeshIO.h  Vector.hpp  global.h
HexEval/: CMakeLists.txt  README.md
HexEval/src/: HexEval.cpp  HexEval.h  MeshIO.cpp  heUtility.hpp  main.cpp
HexPadding/: README.md
HexPadding/data/: 64cube.vtk  64cube_target.txt  8cube.vtk
HexPadding/src/: HexPadding.cpp  HexPadding.h  MeshIO.cpp  MeshIO.h  hpMesh.cpp  hpMesh.h  hpUtility.hpp  main.cpp
HexRefinement/: README.md  template.md
HexRefinement/data/: cube.vtk
HexRefinement/src/: HexRefinement.cpp  Mesh.cpp  Mesh.h  MeshIO.cpp  global.hpp
HexSubdivide/: CMakeLists.txt  README.md
HexSubdivide/src/: MeshIO.cpp  MeshIO.h  main.cpp  subdiv.cpp  subdiv.h
Padding/: CMakeLists.txt
Padding/data/: 8cube.vtk  8cube_distorted.vtk  cad.vtk  cad_refine.txt  rod.vtk  rod_padding.txt  rod_refine.txt  rod_target.txt
Padding/src/: HexPadding.cpp  HexPadding.h  MeshIO.cpp  hpMesh.cpp  (+3 more)
Refinement/: CMakeLists.txt
Refinement/data/: cad_refine.txt  cube.vtk
Refinement/src/: HexRefinement.cpp  Mesh.cpp  Mesh.h  MeshIO.h  RefineTest.cpp  RefineTest.h  Vector.hpp  global.cpp  global.h  global.hpp
Singularity/: CMakeLists.txt  README.md
Singularity/data/: 313884.ovm  38636.ovm  CAD5_1.ovm  bone.ovm  dino.ovm  double_torus.ovm  rod.ovm
Singularity/src/: Singularity.cpp  Singularity.hpp  main.cpp  vtkIO.cpp  vtkIO.hpp
